--- a/src/components/Footer/Footer.styles.scss
+++ b/src/components/Footer/Footer.styles.scss
@@ -1,9 +1,31 @@
+@import '../../styles/settings/breakpoints';
 @import '../../styles/settings/colors';
 
 .footer {
   width: 100%;
   background: $primary-color;
   padding: 26px 0;
+
+  @media (max-width: $lg) {
+    display: none;
+  }
+
+  &--mobile {
+    display: none;
+
+    @media (max-width: $lg) {
+      position: fixed;
+      z-index: 100;
+      bottom: 0;
+
+      width: 100%;
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      box-shadow: 0px -2px 8px 0px #00000014;
+      background: $secondary-color;
+      padding: 10px 20px;
+    }
+  }
 }
 
 .footer-container {
