--- a/src/components/Header/Header.styles.scss
+++ b/src/components/Header/Header.styles.scss
@@ -14,6 +14,20 @@
   padding-bottom: 12px;
   position: relative;
   z-index: 2;
+
+  @media (max-width: $lg) {
+    padding-bottom: 12px;
+
+    button {
+      display: none;
+    }
+  }
+}
+
+.header__search-input {
+  @media (max-width: $lg) {
+    display: none !important;
+  }
 }
 
 .header__shape {
@@ -21,15 +35,21 @@
   z-index: 1;
   top: 0;
   left: 0;
-  width: 100%;
+  box-shadow: 0px 0px 8px 0px #0000001a;
+
   height: 72px;
   border-radius: 0px 0px 32px 0px;
   background: $secondary-color;
-  box-shadow: 0px 1px 1px 0px #0000000d;
+  width: 92%;
 
-  @media (min-width: $lg) {
-    box-shadow: 0px 0px 8px 0px #0000001a;
-    width: 89.07%;
+  @media (max-width: $xl) {
+    width: 97%;
+  }
+
+  @media (max-width: $lg) {
+    height: 104px;
+    width: 100%;
+    box-shadow: 0px 1px 1px 0px #0000000d;
   }
 }
 
@@ -37,6 +57,10 @@
   width: 1px;
   height: 40px;
   background: $gray-600;
+
+  @media (max-width: $lg) {
+    display: none;
+  }
 }
 
 .header__user-info {
@@ -58,4 +82,19 @@
   font-weight: 700;
   line-height: 16px;
   color: $gray-300;
+
+  @media (max-width: $lg) {
+    display: none;
+  }
+}
+
+.header-tab-menu {
+  display: none;
+
+  @media (max-width: $lg) {
+    display: block;
+    position: relative;
+    z-index: 2;
+    padding-top: 0px;
+  }
 }
