--- a/src/components/LinkWithIcon/LinkWithIcon.styles.scss
+++ b/src/components/LinkWithIcon/LinkWithIcon.styles.scss
@@ -1,5 +1,30 @@
+@import '../../styles/settings/breakpoints';
+@import '../../styles/settings/colors';
+
 .link-with-icon {
   display: flex;
   align-items: center;
   column-gap: 12px;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 16px;
+  text-align: left;
+  color: $gray-300;
+
+  &:hover {
+    cursor: pointer;
+  }
+
+  @media (max-width: $lg) {
+    font-size: 10px;
+    font-weight: 500;
+    line-height: 12px;
+    text-align: center;
+    flex-direction: column;
+    row-gap: 4px;
+
+    &.active {
+      color: $primary-color;
+    }
+  }
 }
