--- a/src/components/TabMenu/TabMenu.styles.scss
+++ b/src/components/TabMenu/TabMenu.styles.scss
@@ -26,9 +26,9 @@
   &.default {
     font-size: 14px;
     font-weight: 700;
-    line-height: 16px;
+    line-height: 16.1px;
     text-align: center;
-    padding: 16px;
+    padding: 16px 10px 16px 11px;
     color: $gray-300;
   }
 
