--- a/src/screens/BookDetails/BookDetails.styles.scss
+++ b/src/screens/BookDetails/BookDetails.styles.scss
@@ -4,27 +4,63 @@
 .book-details {
   padding-top: 24px;
   padding-bottom: 60px;
+  min-height: 100vh;
   position: relative;
-}
-
-.book-details__shape {
-  position: absolute;
-  z-index: -1;
-  top: 160px;
-  right: 0;
-  width: 89.07%;
-  height: 90%;
-  border-radius: 32px 0px 0px 0px;
-  background: $secondary-color;
-  box-shadow: 0px 0px 8px 0px #0000001a;
-
-  @media (max-width: $xl) {
-    top: 200px;
-  }
 
   @media (max-width: $lg) {
-    width: 1140px;
-    box-shadow: 0px 1px 1px 0px #0000000d;
+    padding-top: 0;
+  }
+
+  &__shape {
+    position: absolute;
+    z-index: -1;
+    top: 124px;
+    right: 0;
+    width: 92%;
+    height: 95%;
+    border-radius: 32px 0px 0px 0px;
+    background: $secondary-color;
+    box-shadow: 0px 0px 8px 0px #0000001a;
+
+    @media (max-width: $xl) {
+      width: 97%;
+    }
+
+    @media (max-width: $lg) {
+      top: 261px;
+      width: 100%;
+      box-shadow: 0px 1px 1px 0px #0000000d;
+    }
+  }
+}
+
+.book-details__cover-mobile {
+  position: relative;
+  display: none;
+
+  @media (max-width: $lg) {
+    display: block;
+  }
+
+  &__cover {
+    position: relative;
+    z-index: -2;
+    width: 100vw;
+    object-fit: cover;
+    object-position: top center;
+  }
+
+  &__header {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 129px;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 20px;
+    background: linear-gradient(180deg, #000000 0%, rgba(0, 0, 0, 0.0001) 100%);
   }
 }
 
@@ -34,8 +70,9 @@
   grid-template-columns: 1fr 2fr;
   column-gap: 24px;
 
-  @media (max-width: $xl) {
-    grid-template-columns: 5fr 7fr;
+  @media (max-width: $lg) {
+    display: flex;
+    flex-direction: column;
   }
 }
 
@@ -44,6 +81,10 @@
   flex-direction: column;
   align-items: flex-start;
   row-gap: 24px;
+
+  @media (max-width: $lg) {
+    display: none;
+  }
 }
 
 .book-details__aside__cover {
@@ -58,6 +99,10 @@
   flex-direction: column;
   align-items: flex-start;
   position: relative;
+
+  @media (max-width: $lg) {
+    margin-top: -144px;
+  }
 }
 
 .book-details__content__title {
@@ -65,6 +110,12 @@
   line-height: 40px;
   color: $gray-300;
   margin-bottom: 12px;
+
+  @media (max-width: $lg) {
+    font-size: 20px;
+    line-height: 23px;
+    margin-bottom: 8px;
+  }
 }
 
 .book-details__content__author {
@@ -72,6 +123,12 @@
   line-height: 28px;
   margin-bottom: 48px;
   color: $gray-400;
+
+  @media (max-width: $lg) {
+    font-size: 14px;
+    line-height: 16px;
+    margin-bottom: 20px;
+  }
 }
 
 .book-details__content__abstract {
@@ -80,13 +137,24 @@
   color: $gray-300;
   max-width: 100% !important;
   margin-bottom: 40px;
+
+  @media (max-width: $lg) {
+    font-size: 16px;
+    line-height: 23px;
+    margin-bottom: 32px;
+  }
 }
 
 .book-details__content__about-author__title {
   font-size: 28px;
   line-height: 33px;
   color: $gray-300;
-  margin-bottom: 24px;
+  margin-bottom: 8px;
+
+  @media (max-width: $lg) {
+    font-size: 18px;
+    line-height: 21px;
+  }
 }
 
 .book-details__content__about-author__text {
@@ -94,4 +162,9 @@
   line-height: 23px;
   color: $gray-300;
   max-width: 100% !important;
+
+  @media (max-width: $lg) {
+    font-size: 16px;
+    line-height: 23px;
+  }
 }
