--- a/src/components/FavoriteBooks/FavoriteBooks.styles.scss
+++ b/src/components/FavoriteBooks/FavoriteBooks.styles.scss
@@ -12,7 +12,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-bottom: 24px;
+  margin-bottom: 24px;
 }
 
 .favorite-books__head__title {
