--- a/src/components/SeeAllButton/SeeAllButton.styles.scss
+++ b/src/components/SeeAllButton/SeeAllButton.styles.scss
@@ -7,6 +7,7 @@
   line-height: 19px;
   text-align: center;
   color: $primary-color;
+  margin-top: 8px;
 
   @media (max-width: $lg) {
     font-size: 14px;
