--- a/src/components/TabMenu/TabMenu.styles.scss
+++ b/src/components/TabMenu/TabMenu.styles.scss
@@ -61,3 +61,11 @@
   border-radius: 2px 2px 0px 0px;
   background: $primary-color;
 }
+
+@media (max-width: $lg) {
+  .tab-menu__list {
+    &.default {
+      border-bottom: none;
+    }
+  }
+}
