--- a/src/screens/Home/Home.styles.scss
+++ b/src/screens/Home/Home.styles.scss
@@ -20,27 +20,5 @@
 }
 
 .bottom-sections {
-  position: relative;
-}
-
-.bottom-sections__shape {
-  position: absolute;
-  z-index: 1;
-  top: 0;
-  right: 0;
-  height: 100%;
-  border-radius: 32px 0px 0px 0px;
-  background: $secondary-color;
-
-  box-shadow: 0px 0px 8px 0px #0000001a;
-  width: 92%;
-
-  @media (max-width: $xl) {
-    width: 97%;
-  }
-
-  @media (max-width: $lg) {
-    box-shadow: 0px 1px 1px 0px #0000000d;
-    width: 100%;
-  }
+  overflow: hidden;
 }
