--- a/src/components/Footer/Footer.styles.scss
+++ b/src/components/Footer/Footer.styles.scss
@@ -6,14 +6,29 @@
   background: $primary-color;
   padding: 26px 0;
 
-  @media (max-width: $lg) {
+  &--mobile {
     display: none;
   }
 
-  &--mobile {
+  &__container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  &__copy {
+    font-size: 12px;
+    line-height: 14.06px;
+    text-align: right;
+    color: $secondary-color;
+  }
+}
+
+@media (max-width: $lg) {
+  .footer {
     display: none;
 
-    @media (max-width: $lg) {
+    &--mobile {
       position: fixed;
       z-index: 100;
       bottom: 0;
@@ -26,17 +41,4 @@
       padding: 10px 20px;
     }
   }
-}
-
-.footer-container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.footer__copy {
-  font-size: 12px;
-  line-height: 14.06px;
-  text-align: right;
-  color: $secondary-color;
 }
